--- a/App.html
+++ b/App.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <script src="Copy-1.js"></script>
+    <script src="App.js"></script>
 </head>
 
 <body>
@@ -10,7 +10,7 @@
     <button onclick="createQuestion()">Добавить вопрос</button>
     <br>
     <button onclick="clickStartTest()">Начать тест</button>
-
+<!--
     <input id="idCheckbox" type="checkbox" onchange="changeCheckbox(event)">
 
 
@@ -29,7 +29,7 @@
         <input type="button" onClick="Score()" value="Отправить" />
 
 
-
+-->
 </body>
 
 </html>
