--- a/App.html
+++ b/App.html
@@ -6,30 +6,14 @@
 </head>
 
 <body>
+<div>
+    <button id="add-question" onclick="createQuestion()">Добавить вопрос</button>
+    <span style="margin: 20px;"></span>
+    <button id="start-test" onclick="clickStartTest()">Начать тест</button>
+</div>
+<br/>
+<div id="test"></div>
 
-    <button onclick="createQuestion()">Добавить вопрос</button>
-    <br>
-    <button onclick="clickStartTest()">Начать тест</button>
-<!--
-    <input id="idCheckbox" type="checkbox" onchange="changeCheckbox(event)">
-
-
-    <style>
-        span.quest {
-            font-weight: bold;
-        }
-    </style>
-
-    <form name="quiz">
-        <ol>
-            <script>
-
-            </script>
-        </ol>
-        <input type="button" onClick="Score()" value="Отправить" />
-
-
--->
 </body>
 
 </html>
